==> darren1713/elua/src/platform/str9/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "91x_scu.h"
#include "91x_fmi.h"
#include "91x_gpio.h"
#include "91x_uart.h"
#include "91x_tim.h"
#include "common.h"
#include "platform_conf.h"
#include "91x_vic.h"
#include "lrotable.h"
#include "91x_i2c.h"
#include "91x_wiu.h"
#include "buf.h"
#include "elua_adc.h"
#include "91x_adc.h"
#include "91x_ssp.h"
#include "utils.h"

int platform_init()
{
  unsigned i;
  TIM_InitTypeDef tim;
  TIM_TypeDef* base;  
        
  // System configuration
  platform_config_scu();
  
  // PIO setup
  for( i = 0; i < 10; i ++ )
    GPIO_DeInit( ( GPIO_TypeDef* )port_data[ i ] );
    
  // UART setup
  platform_gpio_uart_setup();

  // Initialize timers
  for( i = 0; i < NUM_PHYS_TIMER; i ++ )
  {
    base = ( TIM_TypeDef* )str9_timer_data[ i ];
    TIM_DeInit( base );
    TIM_StructInit( &tim );
    tim.TIM_Clock_Source = TIM_CLK_APB;
    tim.TIM_Prescaler = 255;      
    TIM_Init( base, &tim );    
    TIM_CounterCmd( base, TIM_START );
  }
  
 cmn_platform_init();

#ifdef BUILD_ADC
  // Setup ADCs
  platform_setup_adcs();
#endif

  // Initialize system timer
  cmn_systimer_set_base_freq( 1000000 );
  cmn_systimer_set_interrupt_freq( VTMR_FREQ_HZ );
  platform_s_timer_set_match_int( VTMR_TIMER_ID, 1000000 / VTMR_FREQ_HZ, PLATFORM_TIMER_INT_CYCLIC );
  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  GPIO_TypeDef* base = ( GPIO_TypeDef* )port_data[ port ];
  GPIO_InitTypeDef data;
  pio_type retval = 1;
  
  GPIO_StructInit( &data );
  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:    
      GPIO_Write( base, ( u8 )pinmask );
      break;
      
    case PLATFORM_IO_PIN_SET:
      GPIO_WriteBit( base, ( u8 )pinmask, Bit_SET );
      break;
      
    case PLATFORM_IO_PIN_CLEAR:
      GPIO_WriteBit( base, ( u8 )pinmask, Bit_RESET );
      break;
      
    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = 0xFF;     
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      data.GPIO_Direction = GPIO_PinOutput;
      data.GPIO_Type = GPIO_Type_PushPull ;
      data.GPIO_Alternate=GPIO_OutputAlt1;
      data.GPIO_Pin = ( u8 )pinmask;
      GPIO_Init(base, &data);
      break;
      
    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = 0xFF;     
    case PLATFORM_IO_PIN_DIR_INPUT:
      data.GPIO_Pin = ( u8 )pinmask;
      GPIO_Init(base, &data);
      break;    
            
    case PLATFORM_IO_PORT_GET_VALUE:
      retval = GPIO_Read( base );
      break;
      
    case PLATFORM_IO_PIN_GET:
      retval = GPIO_ReadBit( base, ( u8 )pinmask );
      break;
      
    default:
      retval = 0;
      break;
  }
  return retval;
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  UART_InitTypeDef UART_InitStructure;
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];
    
  // Then configure UART parameters
  switch( databits )
  {
    case 5:
      UART_InitStructure.UART_WordLength = UART_WordLength_5D;
      break;      
    case 6:
      UART_InitStructure.UART_WordLength = UART_WordLength_6D;
      break;      
    case 7:
      UART_InitStructure.UART_WordLength = UART_WordLength_7D;
      break;      
    case 8:
      UART_InitStructure.UART_WordLength = UART_WordLength_8D;
      break;
  }
  if( stopbits == PLATFORM_UART_STOPBITS_1 )
    UART_InitStructure.UART_StopBits = UART_StopBits_1;    
  else
    UART_InitStructure.UART_StopBits = UART_StopBits_2;
  if( parity == PLATFORM_UART_PARITY_EVEN )
    UART_InitStructure.UART_Parity = UART_Parity_Even;
  else if( parity == PLATFORM_UART_PARITY_ODD )
    UART_InitStructure.UART_Parity = UART_Parity_Odd;
  else
    UART_InitStructure.UART_Parity = UART_Parity_No;
  UART_InitStructure.UART_BaudRate = baud;
  UART_InitStructure.UART_HardwareFlowControl = UART_HardwareFlowControl_None;
  UART_InitStructure.UART_Mode = UART_Mode_Tx_Rx;
  UART_InitStructure.UART_FIFO = UART_FIFO_Enable;
  UART_InitStructure.UART_TxFIFOLevel = UART_FIFOLevel_1_2; /* FIFO size 16 bytes, FIFO level 8 bytes */
  UART_InitStructure.UART_RxFIFOLevel = UART_FIFOLevel_1_2; /* FIFO size 16 bytes, FIFO level 8 bytes */

  UART_DeInit( p_uart );
  UART_Init( p_uart , &UART_InitStructure );
  UART_Cmd( p_uart, ENABLE );
  
  return baud;
}

void platform_s_uart_send( unsigned id, u8 data )
{
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];

//  while( UART_GetFlagStatus( STR9_UART, UART_FLAG_TxFIFOFull ) == SET );
  UART_SendData( p_uart, data );
  while( UART_GetFlagStatus( p_uart, UART_FLAG_TxFIFOFull ) != RESET );  
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  UART_TypeDef* p_uart = ( UART_TypeDef* )uarts[ id ];

  if( timeout == 0 )
  {
    // Return data only if already available
    if( UART_GetFlagStatus( p_uart, UART_FLAG_RxFIFOEmpty ) != SET )
      return UART_ReceiveData( p_uart );
    else
      return -1;
  }
  while( UART_GetFlagStatus( p_uart, UART_FLAG_RxFIFOEmpty ) == SET );
  return UART_ReceiveData( p_uart ); 
}

static u32 platform_timer_get_clock( unsigned id )
{
  return ( SCU_GetPCLKFreqValue() * 1000 ) / ( TIM_GetPrescalerValue( ( TIM_TypeDef* )str9_timer_data[ id ] ) + 1 );
}

static u32 platform_timer_set_clock( unsigned id, u32 clock )
{
  u32 baseclk = SCU_GetPCLKFreqValue() * 1000;
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ id ];      
  u64 bestdiv;
  
  bestdiv = ( ( u64 )baseclk << 16 ) / clock;
  if( bestdiv & 0x8000 )
    bestdiv += 0x10000;
  bestdiv >>= 16;
  if( bestdiv > 256 )
    bestdiv = 256;
  TIM_PrescalerConfig( base, bestdiv - 1 );
  return baseclk / bestdiv;
}

void platform_s_timer_delay( unsigned id, timer_data_type delay_us )
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ id ];  
  u32 freq;
  timer_data_type final;
  
  freq = platform_timer_get_clock( id );
  final = ( ( u64 )delay_us * freq ) / 1000000;
  if( final > 2 )
    final -= 2;
  else
    final = 0;
  if( final > 0xFFFF )
    final = 0xFFFF;
  TIM_CounterCmd( base, TIM_STOP );
  TIM_CounterCmd( base, TIM_CLEAR );  
  TIM_CounterCmd( base, TIM_START );  
  while( TIM_GetCounterValue( base ) >= 0xFFFC );
  while( TIM_GetCounterValue( base ) < final );  
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ id ];  

  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
      TIM_CounterCmd( base, TIM_STOP );
      TIM_CounterCmd( base, TIM_CLEAR );  
      TIM_CounterCmd( base, TIM_START );  
      while( TIM_GetCounterValue( base ) >= 0xFFFC );        
      break;
      
    case PLATFORM_TIMER_OP_READ:
      res = TIM_GetCounterValue( base );
      break;
      
    case PLATFORM_TIMER_OP_SET_CLOCK:
      res = platform_timer_set_clock( id, data );
      break;
      
    case PLATFORM_TIMER_OP_GET_CLOCK:
      res = platform_timer_get_clock( id );
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = 0xFFFF;
      break;
  }
  return res;
}

u64 platform_timer_sys_raw_read()
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ VTMR_TIMER_ID ];

  return TIM_GetCounterValue( base );
}

void platform_timer_sys_enable_int()
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ VTMR_TIMER_ID ];

  TIM_ITConfig( base, TIM_IT_OC1, ENABLE );
}

void platform_timer_sys_disable_int()
{
  TIM_TypeDef* base = ( TIM_TypeDef* )str9_timer_data[ VTMR_TIMER_ID ];

  TIM_ITConfig( base, TIM_IT_OC1, DISABLE );
}

void ADC_IRQHandler( void )
{
  elua_adc_dev_state *d = adc_get_dev_state( 0 );
  elua_adc_ch_state *s;

  if ( ADC_GetFlagStatus( ADC_FLAG_ECV ) )
  {
    d->seq_ctr = 0;
    while( d->seq_ctr < d->seq_len )
    {
      s = d->ch_state[ d->seq_ctr ];
      d->sample_buf[ s->id ] = ( u16 )ADC_GetConversionValue( s->id );
      s->value_fresh = 1;
    
      // Fill in smoothing buffer until warmed up
      if ( s->logsmoothlen > 0 && s->smooth_ready == 0)
        adc_smooth_data( s->id );
#if defined( BUF_ENABLE_ADC )
      else if ( s->reqsamples > 1 )
      {
        buf_write( BUF_ID_ADC, s->id, ( t_buf_data* )s->value_ptr );
        s->value_fresh = 0;
      }
#endif

      // If we have the number of requested samples, stop sampling
      if ( adc_samples_available( s->id ) >= s->reqsamples && s->freerunning == 0 )
        platform_adc_stop( s->id );

      d->seq_ctr++;
    }
    d->seq_ctr = 0;
    ADC_ClearFlag( ADC_FLAG_ECV );
  }
  
  if( d->running == 1 )
    adc_update_dev_sequence( 0 );

  if ( d->clocked == 0 && d->running == 1 )
  {
    ADC_ConversionCmd( ADC_Conversion_Start );
  }

  VIC0->VAR = 0xFF;
}

static void platform_setup_adcs()
{
  unsigned id;
  
  for( id = 0; id < NUM_ADC; id ++ )
    adc_init_ch_state( id );
  
  VIC_Config(ADC_ITLine, VIC_IRQ, 0);
  VIC_ITCmd(ADC_ITLine, ENABLE);
  
  ADC_StructInit(&ADC_InitStructure);

  /* Configure the ADC  structure in continuous mode conversion */
  ADC_DeInit();             /* ADC Deinitialization */
  ADC_InitStructure.ADC_Channel_0_Mode = ADC_NoThreshold_Conversion;
  ADC_InitStructure.ADC_Scan_Mode = ENABLE;
  ADC_InitStructure.ADC_Conversion_Mode = ADC_Single_Mode;
  
  ADC_Cmd( ENABLE );
  ADC_PrescalerConfig( 0x2 );
  ADC_Init( &ADC_InitStructure );

  ADC_ITConfig(ADC_IT_ECV, ENABLE);

  platform_adc_set_clock( 0, 0 );
}

int platform_adc_update_sequence( )
{ 
  elua_adc_dev_state *d = adc_get_dev_state( 0 );
    
  ADC_Cmd( DISABLE );
  ADC_DeInit();
  
  ADC_InitStructure.ADC_Channel_0_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_1_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_2_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_3_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_4_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_5_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_6_Mode = ADC_No_Conversion;
  ADC_InitStructure.ADC_Channel_7_Mode = ADC_No_Conversion;

  d->seq_ctr = 0;
  while( d->seq_ctr < d->seq_len )
  {
    GPIO_ANAPinConfig( adc_gpio_chan[ d->ch_state[ d->seq_ctr ]->id ], ENABLE );

    // This is somewhat terrible, but the API doesn't provide an alternative
    switch( d->ch_state[ d->seq_ctr ]->id )
    {
      case 0:
        ADC_InitStructure.ADC_Channel_0_Mode = ADC_NoThreshold_Conversion;
        break;
      case 1:
        ADC_InitStructure.ADC_Channel_1_Mode = ADC_NoThreshold_Conversion;
        break;
      case 2:
        ADC_InitStructure.ADC_Channel_2_Mode = ADC_NoThreshold_Conversion;
        break;
      case 3:
        ADC_InitStructure.ADC_Channel_3_Mode = ADC_NoThreshold_Conversion;
        break;
      case 4:
        ADC_InitStructure.ADC_Channel_4_Mode = ADC_NoThreshold_Conversion;
        break;
      case 5:
        ADC_InitStructure.ADC_Channel_5_Mode = ADC_NoThreshold_Conversion;
        break;
      case 6:
        ADC_InitStructure.ADC_Channel_6_Mode = ADC_NoThreshold_Conversion;
        break;
      case 7:
        ADC_InitStructure.ADC_Channel_7_Mode = ADC_NoThreshold_Conversion;
        break;
    }
    d->seq_ctr++;
  }
  d->seq_ctr = 0;
  
  ADC_Cmd( ENABLE );
  ADC_PrescalerConfig( 0x2 );
  ADC_Init( &ADC_InitStructure );

  ADC_ITConfig( ADC_IT_ECV, ENABLE );

  return PLATFORM_OK;
}

int platform_adc_start_sequence()
{ 
    elua_adc_dev_state *d = adc_get_dev_state( 0 );

    // Only force update and initiate if we weren't already running
    // changes will get picked up during next interrupt cycle
    if ( d->running != 1 )
    {
      // Bail if we somehow were trying to set up clocked conversion
      if( d->clocked == 1 )
        return PLATFORM_ERR;

      adc_update_dev_sequence( 0 );

      d->running = 1;

      ADC_ClearFlag( ADC_FLAG_ECV );

      ADC_ITConfig( ADC_IT_ECV, ENABLE );

      ADC_ConversionCmd( ADC_Conversion_Start );
    }

    return PLATFORM_OK;
  }

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];
  u32 base = SCU_GetPCLKFreqValue() * 1000;
  u32 div = ( base / 256 ) / frequency;
  TIM_InitTypeDef tim;

  TIM_DeInit( p_timer );
  tim.TIM_Mode = TIM_PWM;
  tim.TIM_Clock_Source = TIM_CLK_APB;       
  tim.TIM_Prescaler = 0xFF;       
  tim.TIM_Pulse_Level_1 = TIM_HIGH;   
  tim.TIM_Period_Level = TIM_LOW;    
  tim.TIM_Full_Period = div;
  tim.TIM_Pulse_Length_1 = ( div * duty ) / 100;
  TIM_Init( p_timer, &tim );

  return base / div;
}

u32 platform_pwm_set_clock( unsigned id, u32 clock )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];
  u32 base = ( SCU_GetPCLKFreqValue() * 1000 );
  u32 div = base / clock;

  TIM_PrescalerConfig( p_timer, ( u8 )div - 1 );
  return base / div;
}

u32 platform_pwm_get_clock( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  return ( SCU_GetPCLKFreqValue() * 1000 ) / ( TIM_GetPrescalerValue( p_timer ) + 1 );
}

void platform_pwm_start( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  TIM_CounterCmd( p_timer, TIM_START );
}

void platform_pwm_stop( unsigned id )
{
  TIM_TypeDef* p_timer = ( TIM_TypeDef* )str9_timer_data[ id ];

  TIM_CounterCmd( p_timer, TIM_STOP );
}
